Add orbit video sample