@@ -15,6 +15,14 @@ dependencies {
     implementation "org.spongepowered:math:2.0.1"
 }
 
+compileJava {
+    options.compilerArgs += ['--enable-preview']
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
 test {
     useJUnitPlatform()
 }
